Start personal site

--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
         <img id="cv_picture" src="images/own_photo.jpg">
     </div>   
     <div class="personal-container">
-
+        <div>
+            <hr>
+            <p>
+                I am learning at University of Debrecen. I like learning different programming language. 
+                I like training, playing football and video games. If I have freetime I often read books.
+            </p>
+        </div>
     </div>
 
-    <div class="skills_container">
+    <div class="skills-container">
 
     </div>
 </body>
