Personal Site completed

--- a/index.html
+++ b/index.html
@@ -4,27 +4,141 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Szabolcs Borbíró</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/images/resume.png" type="image/png">
 </head>
 <body>
     <div class="top-container">
-        <div class="grid-container">
-            <h1>My name <br> is <br> Szabolcs</h1>
-            <h2>A <br> student <br> and <br> a <br> future <u>Pro</u>grammer</h2>
+        <div class="top">
+            <div class="grid-container">
+                <h1>My name <br> is <br> Szabolcs</h1>
+                <h2>A <br> student <br> and <br> a <br> future <u>Pro</u>grammer</h2>
+            </div>
+            <img id="cv_picture" src="images/own_photo.jpg">
+        </div>   
+    </div>
+    <div class="intro-container">
+        <div class="intro">
+            <div>
+                <hr class="separate">
+                <h3 class="titles">Introduction</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+                    dolore magna aliqua. Molestie ac feugiat sed lectus vestibulum mattis ullamcorper. Nec ullamcorper sit 
+                    amet risus nullam eget felis eget. Massa eget egestas purus viverra accumsan in nisl.
+                </p>
+                <hr class="separate">
+            </div>
         </div>
-        <img id="cv_picture" src="images/own_photo.jpg">
-    </div>   
-    <div class="personal-container">
-        <div>
-            <hr>
-            <p>
-                I am learning at University of Debrecen. I like learning different programming language. 
-                I like training, playing football and video games. If I have freetime I often read books.
-            </p>
+    </div>
+    <div class="schools-container">
+        <div class="schools">
+            <h3 class="titles">Schools</h3>
+            <div class="school-pictures">
+                <div class="card">
+                    <a href="http://www.refibekes.hu">
+                        <img class="school" src="images/bekes.jpg" alt="">
+                    </a>
+                    <p>
+                        Szegedi Kis István High School
+                    </p>
+                </div>
+                <div class="card">
+                    <a href="https://inf.unideb.hu">
+                        <img class="school" src="images/267593269_4407497102632304_5619304005245754108_n.jpg" alt="">
+                    </a>
+                    <p>
+                        University of Debrecen
+                    </p>
+                </div>
+                <div class="card">
+                    <a href="https://www.udemy.com">
+                        <img class="school" src="images/udemy.png" alt="">
+                    </a>
+                    <p>
+                        Learning of Udemy
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="skills-container">
+        <hr class="separate">
+        <h3 class="titles" style="padding-bottom: 50px;">My skills</h3>
+        <div class="skills">
+            <img class="skills-pic" src="images/pankaj-patel-Fi-GJaLRGKc-unsplash.jpg" alt="">
+            <table>
+                <tr class="table-header">
+                    <th>Skill names</th>
+                    <th>Level</th>
+                </tr>
+                <tr>
+                    <th>Python</th>
+                    <th>
+                        <div class="wrapper">
+                            <div class="progress first"></div>
+                        </div>
+                    </th>
+                </tr>
+                <tr>
+                    <th>HTML</th>
+                    <th>
+                        <div class="wrapper">
+                            <div class="progress second"></div>
+                        </div>
+                    </th>
+                </tr>
+                <tr>
+                    <th>CSS</th>
+                    <th>
+                        <div class="wrapper">
+                            <div class="progress third"></div>
+                        </div>
+                    </th>
+                </tr>
+                <tr>
+                    <th>SAP</th>
+                    <th>
+                        <div class="wrapper">
+                            <div class="progress fourth"></div>
+                        </div>
+                    </th>
+                </tr>
+                <tr>
+                    <th>SQL</th>
+                    <th>
+                        <div class="wrapper">
+                            <div class="progress fifth"></div>
+                        </div>
+                    </th>
+                </tr>
+            </table>
         </div>
     </div>
 
-    <div class="skills-container">
-
+    <div class="footer-container">
+        <div class="footer">
+            <div class="contact-links">
+                    <p>
+                        <a href="https://www.linkedin.com/in/szabolcs-borbíró-820060226/" target="_blank">
+                            <img class="contact-images" src="images/linkedin (1).png" alt="">
+                            LinkedIn
+                        </a>    
+                    </p>                    
+                    <p>
+                        <a href="https://github.com/Borbiro">
+                            <img class="contact-images" src="images/github (1).png" alt="">
+                            Github
+                        </a>
+                    </p>
+                    <p>
+                        <a href="https://twitter.com/Borbiro07">
+                            <img class="contact-images" src="images/twitter (2).png" alt="">
+                            Twitter
+                        </a>
+                    </p>
+            </div>
+            <p>© Borbíró Szabolcs.</p>
+        </div>
     </div>
 </body>
 </html>
