--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <div class="top-container">
         <div class="top">
             <div class="grid-container">
-                <h1>My name <br> is <br> Szabolcs</h1>
-                <h2>A <br> student <br> and <br> a <br> future <u>Pro</u>grammer</h2>
+                <h1>My name is Szabolcs</h1>
+                <h2>A student and a future <u>Pro</u>grammer</h2>
             </div>
-            <img id="cv_picture" src="images/own_photo.jpg">
+            <div class="image-container">
+                <img id="cv_picture" src="images/own_photo.jpg">
+            </div>
         </div>   
     </div>
     <div class="intro-container">
@@ -114,7 +116,6 @@
             </table>
         </div>
     </div>
-
     <div class="footer-container">
         <div class="footer">
             <div class="contact-links">
