--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Szabolcs Borbíró</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="/images/resume.png" type="image/png">
 </head>
 <body>
@@ -38,7 +38,7 @@
             <div class="school-pictures">
                 <div class="card">
                     <a href="http://www.refibekes.hu">
-                        <img class="school" src="images/bekes.jpg" alt="">
+                        <img class="school" src="images/szegedi.jpg" alt="">
                     </a>
                     <p>
                         Szegedi Kis István High School
@@ -46,7 +46,7 @@
                 </div>
                 <div class="card">
                     <a href="https://inf.unideb.hu">
-                        <img class="school" src="images/267593269_4407497102632304_5619304005245754108_n.jpg" alt="">
+                        <img class="school" src="images/university.jpg" alt="">
                     </a>
                     <p>
                         University of Debrecen
@@ -67,7 +67,7 @@
         <hr class="separate">
         <h3 class="titles" style="padding-bottom: 50px;">My skills</h3>
         <div class="skills">
-            <img class="skills-pic" src="images/pankaj-patel-Fi-GJaLRGKc-unsplash.jpg" alt="">
+            <img class="skills-pic" src="images/skills_image.jpg" alt="">
             <table>
                 <tr class="table-header">
                     <th>Skill names</th>
