alternative names change

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h2>A student and a future <u>Pro</u>grammer</h2>
             </div>
             <div class="image-container">
-                <img id="cv_picture" src="images/own_photo.jpg">
+                <img id="cv_picture" src="images/own_photo.jpg" alt="My CV picture">
             </div>
         </div>   
     </div>
@@ -38,7 +38,7 @@
             <div class="school-pictures">
                 <div class="card">
                     <a href="http://www.refibekes.hu">
-                        <img class="school" src="images/szegedi.jpg" alt="">
+                        <img class="school" src="images/szegedi.jpg" alt="Szegedi Kis István High School">
                     </a>
                     <p>
                         Szegedi Kis István High School
@@ -46,7 +46,7 @@
                 </div>
                 <div class="card">
                     <a href="https://inf.unideb.hu">
-                        <img class="school" src="images/university.jpg" alt="">
+                        <img class="school" src="images/university.jpg" alt="University of Debrecen">
                     </a>
                     <p>
                         University of Debrecen
@@ -54,7 +54,7 @@
                 </div>
                 <div class="card">
                     <a href="https://www.udemy.com">
-                        <img class="school" src="images/udemy.png" alt="">
+                        <img class="school" src="images/udemy.png" alt="Udemy">
                     </a>
                     <p>
                         Learning of Udemy
@@ -67,7 +67,7 @@
         <hr class="separate">
         <h3 class="titles" style="padding-bottom: 50px;">My skills</h3>
         <div class="skills">
-            <img class="skills-pic" src="images/skills_image.jpg" alt="">
+            <img class="skills-pic" src="images/skills_image.jpg" alt="Skills picture">
             <table>
                 <tr class="table-header">
                     <th>Skill names</th>
@@ -121,19 +121,19 @@
             <div class="contact-links">
                     <p>
                         <a href="https://www.linkedin.com/in/szabolcs-borbíró-820060226/" target="_blank">
-                            <img class="contact-images" src="images/linkedin (1).png" alt="">
+                            <img class="contact-images" src="images/linkedin (1).png" alt="LinkedIn icon">
                             LinkedIn
                         </a>    
                     </p>                    
                     <p>
                         <a href="https://github.com/Borbiro">
-                            <img class="contact-images" src="images/github (1).png" alt="">
+                            <img class="contact-images" src="images/github (1).png" alt="Github Icon">
                             Github
                         </a>
                     </p>
                     <p>
                         <a href="https://twitter.com/Borbiro07">
-                            <img class="contact-images" src="images/twitter (2).png" alt="">
+                            <img class="contact-images" src="images/twitter (2).png" alt="Twitter icon">
                             Twitter
                         </a>
                     </p>
